--- a/compass/src/css/Login.css
+++ b/compass/src/css/Login.css
@@ -3,10 +3,6 @@ body {
     background-color: #d3d3d3;
 }
 
-article {
-    padding-top: 60px;
-}
-
 form {
     border: 3px none #f1f1f1;
 }
@@ -42,7 +38,9 @@ button {
 button:hover {
     opacity: 0.8;
 }
-
+.login {
+    padding-top: 60px;
+}
 .login-btn {
     width: auto;
     padding: 10px 18px;
