--- a/compass/src/css/NewUser.css
+++ b/compass/src/css/NewUser.css
@@ -1,83 +1,204 @@
+html {
+    height: 100%;
+  }
+
 body {
-    font-family: serif;
-    background-color: #d3d3d3;
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    background-color: rgb(235, 230, 230);
 }
 
-article {
-    margin-top: 10%;
+
+.slogan {
+    font-family: 'Public Sans, sans-serif';
+    font-style: italic;
+    margin-top: -9px;
 }
 
 .company-name {
-    top: 0px;
-    right: 0px;
-}
-
-img.picture {
-    width: 200px;
-    height: 200px;
-    padding: 20px;
-    background-color: #000080;
-}
-
-.slogan {
-    font-family: serif;
+    font-family: 'Public Sans, sans-serif';
     font-style: italic;
+    margin-top: -9px;
+}
+
+
+
+
+input[type=text], input[type=password], input[type=email], input[type=Birthdate] {
+    margin: 5px;
+    padding: 0 10px;
+    width: 200px;
+    height: 34px;
+    color: #404040;
+    background: white;
+    border: 1px solid;
+    border-color: #c4c4c4 #d1d1d1 #d4d4d4;
+    border-radius: 2px;
+    outline: 5px solid #eff4f7;
+    -moz-outline-radius: 3px;
+    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
+  }
+   
+  input[type=text]:focus, input[type=password]:focus {
+    border-color: #7dc9e2;
+    outline-color: #dceefc;
+    outline-offset: 0;
+  }
+   
+  input[type=submit] {
+    padding: 0 18px;
+    height: 29px;
+    font-size: 12px;
     font-weight: bold;
-    margin-top: -10px;
-}
+    color: #527881;
+    text-shadow: 0 1px #e3f1f1;
+    background: #cbe3ee;
+    border: 1px solid;
+    border-color: #b4ccce #b3c0c8 #9eb9c2;
+    border-radius: 16px;
+    outline: 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
+    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+  }
+  
+  input[type=submit]:active {
+    background: #cde5ef;
+    border-color: #9eb9c2 #b3c0c8 #b4ccce;
+    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+  }
+  
 
-/* Full-width input fields */
-input[type="text"],
-input[type="password"] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
 
-input[type="text"] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-
-input[type="password"] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
+  input[type=checkbox],
+  input[type=radio] {
+  border: 1px solid #c0c0c0;
+  margin: 0 0.1em 0 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 1em;
+  width: 1.25em;
+  height: 1.25em;
+  background: #fff;
+  
+  
+  -webkit-appearance: none;
+  -webkit-box-shadow: 1px 1px 1px #fff;
+  -webkit-border-radius: 0.25em;
+  vertical-align: text-top;
+  display: inline-block;
+   
+  }
+  
+  input[type=radio] {
+    -webkit-border-radius: 2em; /* Make radios round */
+    }
+  
+    input[type=checkbox]:checked::after {
+    
+      display:block;
+      text-align: center;
+      font-size: 16px;
+      height: 16px;
+      line-height: 18px;
+      }
+  
+      input[type=radio]:checked::after {
+     
+        display:block;
+        height: 16px;
+        line-height: 15px;
+        font-size: 20px;
+        text-align: center;
+        }
+  
+        select {
+          border: 1px solid #D0D0D0;
+          background: url(https://www.quilor.com/i/select.png) no-repeat right center, -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fbfbfb), to(#ededed));
+          background: -moz-linear-gradient(19% 75% 90deg,#ededed, #fbfbfb);
+          -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+          -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+          -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+          color: #444;
+          }
+  body {
+    font: 13px/20px Tahoma, Verdana, sans-serif;
+    color: #404040;
+    background: #e5e5e5;
+  }
 
 /* Set a style for all buttons */
 button {
-    background-color: #000080;
-    color: white;
+  
+    background-color: white;
+    color: #000080;
     padding: 14px 20px;
     margin: 8px 0;
-    border: none;
+    border: solid navy;
     cursor: pointer;
-    /* width: 100%; */
+    width: auto;
+
 }
 
-button:hover {
-    opacity: 0.8;
+input[type="text"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    display: block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
+input[type="Birthdate"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    display: block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+input[type="password"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    display: block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+input[type="email"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    display: block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
 
 .cancel-btn {
     width: 100px;
-    padding: 10px 18px;
-    background-color: #c70d00;
+    padding: 14px 20px;
+    background-color: navy;
+    color: white;
 }
 
 .sign-up-btn {
     width: 100px;
-    padding: 10px 18px;
+    padding: 14px 20px;
 }
 
+.select {
+    width: 100%;
+}
