--- a/compass/src/css/ForgotPassword.css
+++ b/compass/src/css/ForgotPassword.css
@@ -11,22 +11,17 @@ form {
     border: 3px none #f1f1f1;
 }
 
-input[type="text"] {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-
-input[type="password"] {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+.forgotpassword {
+    background: linear-gradient(45deg, #ffffff 30%, #58d0fe 100%);
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    padding: 0px 50px;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 button {
@@ -68,7 +63,7 @@ button:hover {
 
 img.picture {
     width: 200px;
-    height: 200px;
+    height: auto;
     padding: 20px;
    
 }
