--- a/compass/src/css/Home.css
+++ b/compass/src/css/Home.css
@@ -1,6 +1,6 @@
 .Home {
-    /*background: linear-gradient(45deg, #ffffff, #cccccc);*/
     background: linear-gradient(45deg, #ffffff 30%, #58d0fe 100%);
+    position: relative;
     width: 100%;
     height: 100vh;
     top: 0;
@@ -25,6 +25,7 @@
     font-style: normal;
     font-weight: 100;
     font-size: 80px;
+    margin: 80px 0px;
 }
 .compass {
     margin: 0px;
