--- a/compass/src/css/Login.css
+++ b/compass/src/css/Login.css
@@ -7,24 +7,6 @@ form {
     border: 3px none #f1f1f1;
 }
 
-input[type="text"] {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-
-input[type="password"] {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-
 button {
     background-color: #000080;
     color: white;
@@ -39,11 +21,23 @@ button:hover {
     opacity: 0.8;
 }
 .login {
-    padding-top: 60px;
+    background: linear-gradient(45deg, #ffffff 30%, #58d0fe 100%);
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    padding: 0px 50px;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .login-btn {
     width: auto;
     padding: 10px 18px;
+}
+.imgcontainer {
+    display: flex;
 }
 
 .new-user-btn {
@@ -66,11 +60,4 @@ button:hover {
     font-style: italic;
     font-weight: bold;
     margin-top: 10px;
-}
-
-img.picture {
-    width: 200px;
-    height: 200px;
-    padding: 20px;
-   
 }
