--- a/compass/src/css/Home.css
+++ b/compass/src/css/Home.css
@@ -2,7 +2,6 @@
     background: linear-gradient(45deg, #ffffff 30%, #58d0fe 100%);
     position: relative;
     width: 100%;
-    height: 100vh;
     top: 0;
     padding: 50px;
     margin: 0px;
@@ -25,7 +24,7 @@
     font-style: normal;
     font-weight: 100;
     font-size: 80px;
-    margin: 80px 0px;
+    margin: 0px 0px 80px;
 }
 .compass {
     margin: 0px;
@@ -34,7 +33,7 @@
     font-size: 80px;
 }
 .subtitle {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
 }
 .buttons { 
     display: flex;
