--- a/compass/src/css/global.css
+++ b/compass/src/css/global.css
@@ -15,7 +15,9 @@ input[type="password"] {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-
+body {
+    margin: 0px;
+}
 
 input[type=text]:focus,
 input[type=password]:focus {
