--- a/compass/src/index.css
+++ b/compass/src/index.css
@@ -1,10 +1,11 @@
 #root {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
-/*body {
+body {
   margin: 0;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,4 +16,4 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}*/
+}
