added button clicks working on functionality

--- a/compass/src/css/Accounts.css
+++ b/compass/src/css/Accounts.css
@@ -1,7 +1,7 @@
 .accountRows :hover{
-    background-color:deepskyblue;
+    background-color:#71d7ff;
 }
 
 .isSelected{
-    background-color: deepskyblue;
+    background-color: #71d7ff;
 }
