--- a/compass/src/css/journal.css
+++ b/compass/src/css/journal.css
@@ -1,24 +1,20 @@
-//mock up of CSS for journal entries
+.journalHeader1 {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 10% 20px 10%;
+}
 
-.journal {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-    
-  table {
-    border: 2px solid rgb(34, 109, 139);
-    width: 800px;
-    height: 200px;
-  }
-    
-  th {
-    border-bottom: 1px solid black;
-  }
-    
-  td {
-    text-align: center;
-  }
+.journalHeader1 span{
+  font-weight: 700;
+  font-size: 25px;
+}
+
+.approved{
+  color: green;
+}
+.pending{
+  color: yellow;
+}
+.rejected{
+  color: red
+}
