--- a/compass/src/css/journal.css
+++ b/compass/src/css/journal.css
@@ -19,17 +19,21 @@
   color: red !important;
 }
 
-.searchField {
+.filter {
   margin-top: 100px;
   margin-left: 205px;
   margin-bottom: -60px;
   display: flex;
 }
 
-.searchField .MuiInputBase-root.MuiOutlinedInput-root {
+.filter .MuiInputBase-root.MuiOutlinedInput-root {
   width: 410px;
 }
 
-.searchField .MuiInputBase-input.MuiOutlinedInput-input {
+.filter .MuiInputBase-input.MuiOutlinedInput-input {
   width: 100%;
+}
+
+.filter .dateFilter .MuiInputBase-root.MuiOutlinedInput-root{
+  width: 200px !important;
 }
