ledgers page with full search and filter

--- a/compass/src/css/journal.css
+++ b/compass/src/css/journal.css
@@ -27,7 +27,7 @@
 }
 
 .filter .MuiInputBase-root.MuiOutlinedInput-root {
-  width: 410px;
+  width: 410px !important;
 }
 
 .filter .MuiInputBase-input.MuiOutlinedInput-input {
