--- a/compass/src/css/Email.css
+++ b/compass/src/css/Email.css
@@ -1,36 +1,38 @@
 .Email {
-    display: flex;
-    height: 100vh;
+  display: flex;
+  height: 100vh;
 }
 .emailForm {
-    width: 50%;
+  width: 50%;
 }
 h1 {
-    margin: 50px;
+  margin: 50px;
 }
 #form {
-    margin-top: 50px;
+  margin-top: 50px;
 }
-.MuiFormControl-root.emailForm{
-    margin-top: 0px;
+.MuiFormControl-root.emailForm {
+  margin-top: 0px;
 }
-.MuiInputBase-root.MuiOutlinedInput-root.toSelect{
-    background: white;
-    margin-bottom: 10px;
-}
-
-.fromField .MuiInputBase-root.MuiOutlinedInput-root{
-    background: white;
-    margin-bottom: 10px;
+.MuiInputBase-root.MuiOutlinedInput-root.toSelect {
+  background: white;
+  margin-bottom: 10px;
 }
 
-.messageField .MuiInputBase-root.MuiOutlinedInput-root{
-    background: white;
-    margin-bottom: 10px;
-    width: 500px;
-    height: 300px;
+.fromField .MuiInputBase-root.MuiOutlinedInput-root {
+  background: white;
+  margin-bottom: 10px;
 }
-.messageField .MuiInputBase-root.MuiOutlinedInput-root #outlined-multiline-static{
-    width: 100%;
-    height: 100% !important;
+
+.messageField .MuiInputBase-root.MuiOutlinedInput-root {
+  background: white;
+  margin-bottom: 10px;
+  width: 500px;
+  height: 300px;
+}
+.messageField
+  .MuiInputBase-root.MuiOutlinedInput-root
+  #outlined-multiline-static {
+  width: 100%;
+  height: 100% !important;
 }
