--- a/compass/src/css/global.css
+++ b/compass/src/css/global.css
@@ -1,115 +1,99 @@
 input[type="text"] {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
 input[type="password"] {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 body {
-    margin: 0px;
+  margin: 0px;
 }
 
-input[type=text]:focus,
-input[type=password]:focus {
-
+input[type="text"]:focus,
+input[type="password"]:focus {
 }
 
-input[type=submit] {
-    padding: 0 18px;
-    height: 29px;
-    font-size: 12px;
-    font-weight: bold;
-    color: #527881;
-    text-shadow: 0 1px #e3f1f1;
-    background: #cbe3ee;
-    border: 1px solid;
-    border-color: #b4ccce #b3c0c8 #9eb9c2;
-    border-radius: 16px;
-    outline: 0;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
-    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+input[type="submit"] {
+  padding: 0 18px;
+  height: 29px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #527881;
+  text-shadow: 0 1px #e3f1f1;
+  background: #cbe3ee;
+  border: 1px solid;
+  border-color: #b4ccce #b3c0c8 #9eb9c2;
+  border-radius: 16px;
+  outline: 0;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
+  background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
+  background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
+  background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
+  -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
-input[type=submit]:active {
-    background: #cde5ef;
-    border-color: #9eb9c2 #b3c0c8 #b4ccce;
-    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+input[type="submit"]:active {
+  background: #cde5ef;
+  border-color: #9eb9c2 #b3c0c8 #b4ccce;
+  -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
+input[type="checkbox"],
+input[type="radio"] {
+  border: 1px solid #c0c0c0;
+  margin: 0 0.1em 0 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 1em;
+  width: 1.25em;
+  height: 1.25em;
+  background: #fff;
 
-
-input[type=checkbox],
-input[type=radio] {
-    border: 1px solid #c0c0c0;
-    margin: 0 0.1em 0 0;
-    padding: 0;
-    font-size: 16px;
-    line-height: 1em;
-    width: 1.25em;
-    height: 1.25em;
-    background: #fff;
-
-    -webkit-appearance: none;
-    -webkit-box-shadow: 1px 1px 1px #fff;
-    -webkit-border-radius: 0.25em;
-    vertical-align: text-top;
-    display: inline-block;
+  -webkit-appearance: none;
+  -webkit-box-shadow: 1px 1px 1px #fff;
+  -webkit-border-radius: 0.25em;
+  vertical-align: text-top;
+  display: inline-block;
 }
 
-input[type=radio] {
-    -webkit-border-radius: 2em;
-    /* Make radios round */
-}
-    
-input[type=checkbox]:checked::after {
-    display: block;
-    text-align: center;
-    font-size: 16px;
-    height: 16px;
-    line-height: 18px;
+input[type="radio"] {
+  -webkit-border-radius: 2em;
+  /* Make radios round */
 }
 
-input[type=radio]:checked::after {
-    display: block;
-    height: 16px;
-    line-height: 15px;
-    font-size: 20px;
-    text-align: center;
+input[type="checkbox"]:checked::after {
+  display: block;
+  text-align: center;
+  font-size: 16px;
+  height: 16px;
+  line-height: 18px;
+}
+
+input[type="radio"]:checked::after {
+  display: block;
+  height: 16px;
+  line-height: 15px;
+  font-size: 20px;
+  text-align: center;
 }
 
 img.picture {
-    width: 200px;
-    height: auto;
-    padding: 20px;
+  width: 200px;
+  height: auto;
+  padding: 20px;
 }
-    /* Set a style for all buttons */
- /*   
-button {
-
-    background-color: white;
-    color: #000080;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: solid navy;
-    cursor: pointer;
-    width: auto;
-
-}*/
